// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reports error for fragment spread without @alias in fragment 1`] = `
"
			graphql\`fragment foo on Page { ...Component_fragment @alias }\`;
		"
`;

exports[`reports error for fragment spread without @alias in query 1`] = `
"
			graphql\`query Root { ...Component_fragment @alias }\`;
		"
`;

exports[`reports error for nested fragment spread without @alias 1`] = `
"
			graphql\`fragment foo on Page {
				some_field {
					...Component_fragment @alias
				}
			}\`;
		"
`;

exports[`reports error only for spread without @alias when mixed 1`] = `
"
			graphql\`fragment foo on Page {
				...ComponentA_fragment @alias
				...ComponentB_fragment @alias
			}\`;
		"
`;

exports[`reports errors for multiple fragment spreads without @alias 1`] = `
"
			graphql\`fragment foo on Page {
				...ComponentA_fragment @alias
				...ComponentB_fragment @alias
			}\`;
		"
`;

exports[`reports errors for nested fragment spreads where outer has @alias but inner does not 1`] = `
"
			graphql\`fragment Foo on Page {
				...Foo @alias
				nested {
					...Foo @alias
				}
			}\`;
		"
`;

exports[`reports errors for two spreads without @alias where one is nested 1`] = `
"
			graphql\`fragment foo on Page {
				...ComponentA_fragment @alias
				nested {
					...ComponentA_fragment @alias
				}
			}\`;
		"
`;
